--- a/styles/login.module.scss
+++ b/styles/login.module.scss
@@ -8,6 +8,7 @@
   position: absolute;
   width: calc(100% - 54px);
   z-index: 1;
+  box-shadow: $basic-box-shadow;
 
   @media (min-width: $screen-md) {
     padding-left: $space-lg;
@@ -31,10 +32,4 @@
   line-height: $space-xl;
   text-align: center;
   margin-bottom: $space-lg * 2;
-}
-
-.loginButton {
-  background: linear-gradient(to right bottom, #1B5F74, #1791B7);
-  font-family: "Mukta";
-  width: 100%;
 }
