--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,6 +10,7 @@ $border-gray: #E0E0E0;
 $gray-font: #646E73;
 $light-gray-font: #E0E0E0;
 $black-footer: #212121;
+$green-blue: #18647B;
 
 // Spacing
 $space-base: 0.5rem;                // 8px
@@ -28,6 +29,7 @@ $font-size-md: $space-base * 2;         // 16px
 $font-size-lg: $space-base * 3;         // 24px
 $font-size-xl: $space-md * 2;           // 32px
 $font-size-xxl: $space-xl * 2;          // 64px
+$font-size-title-xl: $font-size-base * 8.75; //70px
 
 // Font Weight
 $font-weight-base: 400;
@@ -41,9 +43,11 @@ $font-family-global: 'Mukta';
 $line-height-heading: $font-size-xl;
 $line-height-content: $font-size-base * 2.5;
 $line-height-link: $font-size-xs * 6.25;
+$line-height-title: $font-size-base * 10;
+$line-height-title-mobile: $font-size-xs * 9.25;
 
 // Breakpoints
 $screen-sm: 575.98px;
 $screen-md: 767px;
 $screen-lg: 991px;
-$screen-xl: 1199px;
+$screen-xl: 1080px;
